# GimGui

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  emccify.sh
cmake/modules/: FindGLFW3.cmake  FindGimGui.cmake
examples/common/: color.hpp  gl_core_3_3.c  opengl.hpp  textureadaptor.cpp  textureadaptor.hpp  vec2.hpp  window.cpp  window.hpp
examples/common/glutils/: baseshader.cpp  baseshader.hpp  buffer.cpp  buffer.hpp  projection.cpp  projection.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  textureloader.cpp  textureloader.hpp  uniform.cpp  uniform.hpp  vao.cpp  vao.hpp  vertexattribute.cpp  vertexattribute.hpp
examples/include/: gl_core_3_3.h
examples/simple_rendering/src/: events.cpp  events.hpp  main.cpp  simplerendering.cpp  simplerendering.hpp
include/gimgui/: assert.hpp
include/gimgui/data/: bitmap.hpp  codepointsize.hpp  codepointsizeid.hpp  element.hpp  element.inl  font.hpp  fontloadexception.hpp  glyph.hpp  ivec2.hpp  rectangle.hpp  rectangle.inl  renderdata.hpp  rendermodes.hpp  textalignments.hpp  textstyles.hpp  texturecoordinates.hpp  types.hpp  variant.hpp  variant.inl  wrapmode.hpp
include/gimgui/gui/: gui.hpp  gui.inl
include/gimgui/logic/: absolutemap.hpp  absolutemap.inl  allpropagator.hpp  attributepopulator.hpp  attributepopulator.inl  boundarypropagator.hpp  boundarypropagator.inl  event.hpp  fonttexturecache.hpp  fonttexturecache.inl  foreach.hpp  rectanglepacker.hpp  rectanglepacker.inl  renderdatagenerator.hpp  renderdatagenerator.inl  utf8decoder.hpp
include/gimgui/util/: getorfallback.hpp  getorfallback.inl  guillotinebinpack.hpp  ref.hpp  ref.inl  resolve.hpp  resolve.inl
src/data/: codepointsize.cpp  codepointsizeid.cpp  element.cpp  font.cpp  fontloadexception.cpp  renderdata.cpp  textstyles.cpp  texturecoordinates.cpp  variant.cpp
src/gui/: gui.cpp
src/logic/: allpropagator.cpp  attributepopulator.cpp  fonttexturecache.cpp  rectanglepacker.cpp  utf8decoder.cpp
src/util/: guillotinebinpack.cpp
test/data/: element.cpp  elementtest.cpp  fonttest.cpp  rectangletest.cpp  varianttest.cpp
test/gui/: guitest.cpp
test/helpers/: closeenough.cpp  closeenough.hpp  color.cpp  color.hpp  helperstest.cpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  textureinterfacestub.cpp  textureinterfacestub.hpp  vec2.cpp  vec2.hpp  vector2.cpp  vector2.hpp
test/logic/: absolutemaptest.cpp  allpropagatortest.cpp  attributepopulatortest.cpp  boundarypropagatortest.cpp  fonttexturecachetest.cpp  rectanglepackertest.cpp  renderdatageneratortest.cpp  utf8decodertest.cpp
test/util/: fonttexturecachetest.cpp  getorfallbacktest.cpp  guillotinebinpacktest.cpp  reftest.cpp  resolvetest.cpp
